Grid display of search results

--- a/frontend/styles/R20.styl
+++ b/frontend/styles/R20.styl
@@ -1,5 +1,10 @@
 textarea
-  resize vertical
+  resize          vertical
 
 img.logo
-  max-width 30%
+  max-width       30%
+
+.search-result .panel-body
+  height          8em
+  overflow        hidden
+  text-align      center
