Show number of answers next to search results
Also display each result in a row.

--- a/frontend/styles/R20.styl
+++ b/frontend/styles/R20.styl
@@ -4,7 +4,6 @@ textarea
 img.logo
   max-width       30%
 
-.search-result .panel-body
-  height          8em
-  overflow        hidden
-  text-align      center
+// .search-result .panel-body
+//   height          12em
+//   overflow        hidden
