Search via hastags
Disabled ElasticSearch in fig.yml
Disabled (commented out) all ElasticSearch related code
Added tags (array of strings) to question model
Expose distinct tags in every response (middleware/tags)
Changes in GET /questions route to support search via tags
Changes in POST /questions and POST /questions/:id
Change in search-form component (use tags)
Remove search form from stories list (temporary)
Tags frontend script (uses select2)
Some select2 related styling

--- a/frontend/styles/R20.styl
+++ b/frontend/styles/R20.styl
@@ -4,6 +4,16 @@ textarea
 img.logo
   max-width       30%
 
+.select2-container-multi .select2-choices
+  background-image none
+  
+
+  .select2-search-choice
+    margin-top      5px
+
+  .select2-search-field input
+    padding         5px 12px
+
 // .search-result .panel-body
 //   height          12em
 //   overflow        hidden
